Fix z-index for story cover & contact panel
Closes #85

--- a/app/assets/stylesheets/scss/_header.scss
+++ b/app/assets/stylesheets/scss/_header.scss
@@ -131,6 +131,9 @@
 }
 
 #contact{
+  // Avoid absolute elements to place over contact panel 
+  position: relative;
+  z-index: 100;
 
   .well{
     margin: 0;
