--- a/app/assets/stylesheets/scss/_stories.scss
+++ b/app/assets/stylesheets/scss/_stories.scss
@@ -16,8 +16,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 200;
-
+  z-index: 70;
+  
   .item-preview{
     border-radius: 0;
     height: 100%;
